test/Fail/Issue3090-lparen.err
Issue3090-lparen.agda:4.23: error: [ParseError]
in the name (, the part ( is not valid because it is used to parenthesize expressions
